--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,3 +1,3 @@
-useDynLib(strsplit.fix.num, .registration=TRUE)
+useDynLib(strsplit.fix, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
 exportPattern("^[[:alpha:]]+")
